5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1575_2896.log
== TEST (2019-03-12 13:12:25) 
-- CODE:
# Use este codigo como ponto de partida
cleber
# Leitura de valores de entrada
var = input("cleber:")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cleber
NameError: name 'cleber' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:13:18) 
-- CODE:
# Use este codigo como ponto de partida
input("cleber:")
# Leitura de valores de entrada
var = input("cleber:")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:13:26) 
-- CODE:
# Use este codigo como ponto de partida
input("cleber:")
# Leitura de valores de entrada
var = input("cleber:")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.21214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:13:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("cleber")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:13:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("cleber")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.184619
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
